[tool.poetry]
name = "fast-security"
version = "0.1.0"
description = ""
authors = ["Christopher <christophermachado222@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "*"
python-multipart = "^0.0.18"
uvicorn = {extras = ["standard"], version = "^0.32.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
